Fix layout bug

--- a/apps/main/app/ui/home/-components/main-content/styles.css
+++ b/apps/main/app/ui/home/-components/main-content/styles.css
@@ -172,7 +172,7 @@
   flex: 1;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #212121;
 }
 
